<resources>
    <string name="app_name">Beabot</string>
    <string name="app_version">Version %1$s</string>
    <string name="info_app_description">The automatic attendance scanner</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="act_log_in">Login</string>
    <string name="label_logging_in">Logging in…</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_register">No account yet? <u><font color='blue'>Create now</font></u></string>
    <string name="label_account_type">Account type</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="act_register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_scan">Scan</string>
    <string name="label_attendance">Attendance</string>
    <string name="label_profile">Profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="label_exit">Exit</string>
    <string name="label_actions">Actions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_section">Section</string>
    <string name="msg_camera_loading">Camera loading please wait…</string>
    <string name="msg_camera_no_permission">Please allow camera permission</string>
    <string name="msg_allow_permission_in_settings">To use the scan functionality, allow camera permission to view the barcodes</string>
    <string name="label_attendance_list">Attendance list:</string>
    <string name="act_edit">Edit</string>
    <string name="act_delete">Delete</string>
    <string name="label_lrn">LRN</string>
    <string name="label_logout">Logout</string>
    <string name="label_students">Students</string>
    <string name="label_logging_out">Logging out…</string>
    <string name="msg_forgot_password">Forgot your password? No worries. Just enter the email you used to sign up and we\'ll send you a link to reset it.</string>
    <string name="label_reset_your_password">Reset your password</string>
    <string name="btn_send_password_reset_email">Send password reset email</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_password_reset_success">Success, check your email for instructions</string>
    <string name="err_msg_not_valid_email">Please enter a valid email</string>
    <string name="label_our_team">Our team</string>
    <string name="label_github">Github</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_instagram">Instagram</string>
    <string name="label_special_thanks">Special thanks</string>
</resources>