<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Oliver Rhyme G. Añasco
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/label_scan" />

        <item
            android:enabled="false"
            android:visible="false"
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/label_dashboard" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/label_attendance" />

        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_students"
            android:title="@string/label_students" />

        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/ic_barcode"
            android:title="@string/label_generate" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/label_settings"
            android:visible="true" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/label_about" />
    </group>

    <item android:title="@string/label_actions">
        <menu>

            <!--            <item-->
<!--                android:id="@+id/nav_about"-->
<!--                android:icon="@drawable/ic_about"-->
<!--                android:title="@string/label_about"-->
<!--                android:visible="false"/>-->
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/label_logout"/>

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/label_exit" />
        </menu>
    </item>

</menu>
