<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scan">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.snorlax.snorlax.ui.home.ScanFragment"
        android:label="@string/label_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.snorlax.snorlax.ui.home.attendance.AttendanceFragment"
        android:label="@string/label_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/nav_students"
        android:name="com.snorlax.snorlax.ui.home.StudentsFragment"
        android:label="@string/label_students"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_generate"
        android:name="com.snorlax.snorlax.ui.home.generate.GeneratorFragment"
        android:label="@string/label_generate"
        tools:layout="@layout/fragment_generate" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.snorlax.snorlax.ui.home.AboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.snorlax.snorlax.ui.home.SettingsFragment"
        android:label="@string/label_settings" />
    <fragment
        android:id="@+id/nav_hub"
        android:name="com.snorlax.snorlax.ui.home.HubFragment"
        android:label="@string/label_hub"
        tools:layout="@layout/fragment_hub" />
</navigation>