<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Oliver Rhyme G. Añasco
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_first_name"
        android:inputType="textPersonName"
        android:singleLine="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_last_name"
        android:inputType="textPersonName"
        android:singleLine="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_lrn"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_lrn"
        android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lrn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>