<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Oliver Rhyme G. Añasco
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="8dp"
        tools:context=".ui.auth.CredentialsActivity">


        <TextView
            android:id="@+id/btn_create_account"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/label_register"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_password" />

        <TextView
            android:id="@+id/btn_forgot_password"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/label_forgot_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/act_log_in"
            android:textColor="@android:color/white"
            app:initialCornerAngle="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_layout_password"
            app:layout_constraintStart_toStartOf="@+id/text_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:animateLayoutChanges="true"
            android:elevation="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_email"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:elevation="8dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/text_layout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>